syntax = "proto3";

option go_package = ".;fault";
package fault;

message Status {
  int32 code = 1;
  string info = 2;
}

message ClientInfo{
  string jobId = 1;
  string role = 2;
}

message FaultMsgSignal {
  string uuid = 1;
  string jobId = 2;
  string signalType = 3;
  repeated string faultNode = 4;
  repeated NodeFaultInfo nodeFaultInfo = 5;
}

message NodeFaultInfo {
  string nodeIP = 1;
  string nodeSN = 2;
  string faultLevel = 3;
  repeated DeviceFaultInfo faultDevice = 4;
}

message DeviceFaultInfo {
  string deviceId = 1;
  string deviceType = 2;
  repeated string faultCodes = 3;
  string faultLevel = 4;
  repeated string faultType = 5;
  repeated string faultReason = 6;
}

service Fault {
  rpc Register(ClientInfo) returns (Status) {}
  rpc SubscribeFaultMsgSignal(ClientInfo) returns (stream FaultMsgSignal){}
}